# sqlx

./: Cargo.toml  README.md
.github/workflows/: sqlx.yml
sqlx-cli/src/: prepare.rs
sqlx-core/: Cargo.toml
sqlx-core-next/: Cargo.toml
sqlx-core-next/src/: arguments.rs  connection.rs  database.rs  error.rs  execute.rs  executor.rs  lib.rs  options.rs  to_value.rs  type.rs  type_info.rs
sqlx-core-next/src/options/: ssl_mode.rs
sqlx-core/src/: database.rs  describe.rs  executor.rs  lib.rs
sqlx-core/src/pool/: mod.rs
sqlx-core/src/postgres/connection/: executor.rs
sqlx-core/src/types/: mod.rs
sqlx-macros/: Cargo.toml
sqlx-macros/src/database/: mod.rs
sqlx-macros/src/query/: mod.rs
sqlx-test/src/: lib.rs
src/: lib.rs  macros.rs
tests/: .dockerignore  docker-compose.yml  docker.py  x.py
