[package]
name = "sqlx-core-next"
version = "0.5.0-pre"
repository = "https://github.com/launchbadge/sqlx"
description = "Core of SQLx, the rust SQL toolkit."
license = "MIT OR Apache-2.0"
edition = "2018"
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>",
    "Daniel Akhterov <akhterovd@gmail.com>",
]

[package.metadata.docs.rs]
features = ["async", "blocking"]

[features]
async = ["futures-core"]
blocking = []

[dependencies]
thiserror = "1.0.22"
futures-core = { version = "0.3.8", optional = true }
